--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,10 @@ img {
 }
 
 @media screen and (max-width: 992px){
+  .container {
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+  }
   
 }
 
@@ -178,9 +182,10 @@ img {
 }
 
 @media screen and (max-width: 350px){
-  
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
 }
-
-
 
 }
