--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -83,6 +83,19 @@
     100% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
+
+    0% {
+        opacity: 0;
+        transform: translateY(20px) rotate(-5deg); /* Start slightly below and tilted left */
+    }
+    50% {
+        opacity: 0.7;
+        transform: translateY(-5px) rotate(3deg); /* Mid-point: lift and tilt right */
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) rotate(0deg); /* Settle at normal position and no tilt */
+    }
 }
 
 .home_scroll {
@@ -198,7 +211,10 @@
         height: 22px;
     }
   }
-  
-.button_icon {
-    display: inline-flex;
+
+:root {
+    .button {
+        display: inline-flex;
+      }
 }
+  
