--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -53,6 +53,9 @@
     align-items: center;
     justify-content: center;
     column-gap: 0.25rem;
+    /* Ensure minimum touch target */
+    min-height: 44px;
+    min-width: 44px;
 }
 
 .contact__button-icon {
@@ -87,6 +90,7 @@
     border-radius: 0.75rem;
     padding: 1.5rem;
     z-index: 1;
+    font-size: var(--normal-font-size);
 }
 
 .contact__form-tag {
@@ -101,21 +105,38 @@
 
 .contact__form-area {
     height: 11rem;
-
 }
 
 .contact__form-area textarea{
     resize: none;
 }
 
-@media screen and (max-width: 992px){
-  .contact__container {
-    column-gap: 3rem;
-  }
+/* Enhanced responsive design */
+@media screen and (max-width: 1200px) {
+    .contact__container {
+        column-gap: 4rem;
+    }
+
+    .contact__form {
+        width: 320px;
+    }
 }
-  
-  
-  @media screen and (max-width: 768px){
+
+@media screen and (max-width: 992px) {
+    .contact__container {
+        column-gap: 3rem;
+    }
+
+    .contact__info {
+        grid-template-columns: 280px;
+    }
+
+    .contact__form {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 768px) {
     .contact__container {
         grid-template-columns: 1fr;
         row-gap: 3rem;
@@ -123,26 +144,127 @@
 
     .contact__info {
         justify-content: center;
+        grid-template-columns: 1fr;
+        max-width: 400px;
+        margin: 0 auto;
     }
 
     .contact__form {
         margin: 0 auto;
+        width: 100%;
+        max-width: 400px;
     }
-  }
-  
-  @media screen and (max-width: 576px){
+
+    .contact__form-div {
+        height: 3.5rem;
+    }
+
+    .contact__form-input {
+        padding: 1.25rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
     .contact__info {
         grid-template-columns: 1fr;
+        max-width: 100%;
     }
 
     .contact__form {
         width: 100%;
+        max-width: 100%;
     }
-  }
-  
-  @media screen and (max-width: 350px){
- 
-  }
+
+    .contact__form-div {
+        height: 3.25rem;
+    }
+
+    .contact__form-input {
+        padding: 1rem;
+        font-size: var(--small-font-size);
+    }
+
+    .contact__form-tag {
+        font-size: var(--tiny-font-size);
+        left: 1rem;
+    }
+
+    .contact__card {
+        padding: 0.875rem;
+    }
+
+    .contact__card-icon {
+        font-size: 1.75rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .contact__container {
+        row-gap: 2rem;
+    }
+
+    .contact__form-div {
+        height: 3rem;
+    }
+
+    .contact__form-input {
+        padding: 0.875rem;
+    }
+
+    .contact__form-area {
+        height: 10rem;
+    }
+
+    .contact__card {
+        padding: 0.75rem;
+    }
+
+    .contact__card-icon {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .contact__form-div {
+        height: 2.75rem;
+    }
+
+    .contact__form-input {
+        padding: 0.75rem;
+        font-size: var(--smaller-font-size);
+    }
+
+    .contact__form-tag {
+        font-size: var(--tiny-font-size);
+        left: 0.75rem;
+    }
+
+    .contact__card {
+        padding: 0.625rem;
+    }
+
+    .contact__card-icon {
+        font-size: 1.25rem;
+    }
+
+    .contact__card-title,
+    .contact__card-data {
+        font-size: var(--tiny-font-size);
+    }
+}
+
+/* Additional mobile improvements */
+@media screen and (max-width: 768px) {
+    .contact__button {
+        font-size: var(--smaller-font-size);
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .contact__button {
+        font-size: var(--tiny-font-size);
+    }
+}
   
   
  
