--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -16,6 +16,12 @@
 .home_social-icon {
     font-size: 1.25rem;
     color: var(--title-color);
+    /* Ensure minimum touch target */
+    min-height: 44px;
+    min-width: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .home_social-icon:hover {
@@ -25,15 +31,14 @@
 .home_title {
     font-size: var(--big-font-size);
     margin-bottom: var(--mb-0-25);
+    line-height: 1.1;
 }
-
 
 .home_hand {
     width: 38px;
     height: 38px;
     margin-left: 0.6rem;
 }
-
 
 .home_subtitle {
     position: relative;
@@ -56,6 +61,7 @@
 .home_description {
     max-width: 400px;
     margin-bottom: var(--mb-3);
+    line-height: 1.6;
 }
 
 .home_img {
@@ -83,8 +89,6 @@
     100% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
-
-
 }
 
 .home_scroll {
@@ -109,6 +113,9 @@
 .home_scroll-button {
     display: flex;
     align-items: center;
+    /* Ensure minimum touch target */
+    min-height: 44px;
+    min-width: 44px;
 }
 
 .home_scroll-name {
@@ -123,8 +130,15 @@
     color: var(--title-color);
 }
 
+/* Enhanced responsive design */
+@media screen and (max-width: 1200px) {
+    .home_content {
+        grid-template-columns: 100px repeat(2, 1fr);
+        column-gap: 1.5rem;
+    }
+}
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 992px) {
     .home_content {
         grid-template-columns: 100px repeat(2, 1fr);
         column-gap: 1.25rem;
@@ -159,13 +173,13 @@
     .home_scroll {
         margin-left: 7.5rem;
     }
-  }
-  
-  
-  @media screen and (max-width: 768px){
+}
+
+@media screen and (max-width: 768px) {
     .home_content {
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
+        gap: 1rem;
     }
 
     .home_img {
@@ -186,24 +200,90 @@
     .home_scroll {
         display: none;
     }
-  }
-  
-  
-  @media screen and (max-width: 350px){
+
+    .home_subtitle {
+        padding-left: 3rem;
+    }
+
+    .home_subtitle::before {
+        width: 35px;
+        top: 0.7rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .home_content {
+        grid-template-columns: 1fr;
+        padding-top: 2.5rem;
+        text-align: center;
+    }
+
+    .home_social {
+        justify-content: center;
+        margin-bottom: var(--mb-1);
+    }
+
     .home_img {
         width: 180px;
         height: 180px;
+        margin: 0 auto;
+    }
+
+    .home_subtitle {
+        padding-left: 0;
+        text-align: center;
+    }
+
+    .home_subtitle::before {
+        display: none;
+    }
+
+    .home_description {
+        text-align: center;
+        margin: 0 auto var(--mb-2);
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .home_img {
+        width: 160px;
+        height: 160px;
     }
 
     .home_hand {
         width: 22px;
         height: 22px;
     }
-  }
+
+    .home_title {
+        font-size: var(--h1-font-size);
+    }
+
+    .home_subtitle {
+        font-size: var(--normal-font-size);
+    }
+}
+
+/* Additional mobile improvements */
+@media screen and (max-width: 768px) {
+    .home_social-icon {
+        font-size: 1.1rem;
+        min-height: 40px;
+        min-width: 40px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .home_social-icon {
+        font-size: 1rem;
+        min-height: 36px;
+        min-width: 36px;
+    }
+}
 
 :root {
     .button {
         display: inline-flex;
-      }
+    }
 }
   
