--- a/src/Components/Qualifications/Qualification.css
+++ b/src/Components/Qualifications/Qualification.css
@@ -14,6 +14,12 @@
     color: var(--title-color);
     margin: 0 var(--mb-1);
     cursor: pointer;
+    /* Ensure minimum touch target */
+    min-height: 44px;
+    min-width: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .qualification__button:hover {
@@ -80,37 +86,114 @@
     transform: translate(6px, -7px);
 }
 
+/* Enhanced responsive design */
+@media screen and (max-width: 1200px) {
+    .qualification__container {
+        max-width: 700px;
+    }
+}
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 992px) {
     .qualification__container {
         margin-left: auto;
         margin-right: auto;
     }
+
+    .qualification__data {
+        column-gap: 1.25rem;
+    }
 }
-  
-  
-  @media screen and (max-width: 768px){
+
+@media screen and (max-width: 768px) {
     .qualification__container {
         margin-left: var(--mb-1-5);
         margin-right: var(--mb-1-5);
     }
-  }
-  
-  @media screen and (max-width: 576px){
+
+    .qualification__tabs {
+        margin-bottom: var(--mb-1-5);
+    }
+
+    .qualification__button {
+        font-size: var(--normal-font-size);
+        margin: 0 var(--mb-0-75);
+    }
+
+    .qualification__icon {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
     .qualification__sections {
         grid-template-columns: initial;
     }
 
     .qualification__button {
         margin: 0 var(--mb-0-75);
+        font-size: var(--small-font-size);
     }
-  }
-  
-  @media screen and (max-width: 350px){
+
+    .qualification__icon {
+        font-size: 1.3rem;
+    }
+
+    .qualification__data {
+        grid-template-columns: 1fr;
+        row-gap: 0.5rem;
+        text-align: center;
+    }
+
+    .qualification__rounder,
+    .qualification__line {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .qualification__tabs {
+        flex-direction: column;
+        gap: 0.5rem;
+        align-items: center;
+    }
+
+    .qualification__button {
+        margin: 0;
+        font-size: var(--smaller-font-size);
+    }
+
+    .qualification__icon {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
     .qualification__data {
         gap: 0.5rem;
     }
-  }
+
+    .qualification__title {
+        font-size: var(--small-font-size);
+    }
+
+    .qualification__subtitle,
+    .qualification__calender {
+        font-size: var(--tiny-font-size);
+    }
+}
+
+/* Additional mobile improvements */
+@media screen and (max-width: 768px) {
+    .qualification__title {
+        line-height: 1.3;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .qualification__title {
+        line-height: 1.2;
+    }
+}
   
   
   
